[gd_scene load_steps=5 format=3 uid="uid://c4qb8abvjnj7l"]

[ext_resource type="Script" path="res://scenes/menus/pause_menu/pause_menu.gd" id="1_ui0sl"]
[ext_resource type="FontFile" uid="uid://b8g5bl37fquk" path="res://assets/fonts/IMFellDWPicaSC-Regular.ttf" id="2_xstcs"]
[ext_resource type="PackedScene" uid="uid://c5yxv5ex1xpa6" path="res://scenes/options_menu/options_menu_pause.tscn" id="3_oq85n"]

[sub_resource type="LabelSettings" id="LabelSettings_we4te"]
font = ExtResource("2_xstcs")
font_size = 100
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ui0sl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.788235)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PAUSE"
label_settings = SubResource("LabelSettings_we4te")

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="ResumeButton2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="OptionsMenuPause" parent="." instance=ExtResource("3_oq85n")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResumeButton2" to="." method="_on_resume_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
